--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100vh;
+  width: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.dark {
+  background-color: #ccc;
+  height: 250px;
+  width: 250px;
+}
+
+.dark:hover {
+  filter: brightness(85%);
+}
+
+.dark:active {
+  background-color: #00ff00;
 }
